Fixes click to call button on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1007,4 +1007,11 @@ input[type="search"]::-webkit-search-decoration {
 			display: none;
 		}
 	}
+	.widget.clicktocall a {
+		border: 1px solid @borders-buttons;
+		padding: 6px 14px 7px;
+		&:hover {
+			padding: 6px 14px 7px;
+		}
+	}
 }
